# daVinci_matlab_code

./: Automatic Suturing Steps.xmind
davinci_gripperFK/: calGripperFK.m  gripperFK.m
davinci_launch/: CMakeLists.txt  package.xml
davinci_launch/launch/: usb_calibration.launch  usb_stereo.launch
davinci_vision/: .~lock.Untitled 1.odp#  .~lock.Untitled 13.ods#  deVinciCameraCalibrationReport.odt
davinci_vision/camera_intrinsic_properties/: README.md  calculateBaseLine_V0.m  calculateCentralPixal_V0.m  calculateCentralPixal_V1.m  calculateCentralPixal_V1.m~  cameraIntrinsicPropertiesCal_V0.m  cameraIntrinsicPropertiesCal_V1.m  cameraIntrinsicPropertiesCal_V2.m  cameraIntrinsicPropertiesCal_V3.m  cameraIntrinsicPropertiesCal_V4.m  cameraTriangulation.m  comparePointsCoordinatesInCameraFrame.m  comparePointsCoordinatesInWorldFrame.m  printUVPixal.m  transPointCoordFromWorldFrameToPixel.m  untitled.m  uv_vals_left.m
davinci_vision/images5/: calibration5.m  point_coordinate_wrt_world_frame.m  uv_vals_right.m
stereo_sync/: CMakeLists.txt  README.md  package.xml
stereo_sync/src/: cameras_timesync.cpp
